--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="nam.css">
-    <link  rel="shortcut icon" href="картинки/ico.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Work/nam.css">
+    <link  rel="shortcut icon" href="Work/картинки/ico.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -32,33 +32,33 @@
         </div>
         <div class="main_inter">
             <div>
-                <img src="картинки/1.png">
+                <img src="Work/картинки/1.png">
                 <h3>Flat Design</h3>
                 <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Suspen  </p>
               
         </div>
         <div>
-            <img src="картинки/2.png">
+            <img src="Work/картинки/2.png">
             <h3>Marketable</h3>
             <p>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Suspen</p>
     </div>
             <div>
-                <img src="картинки/3.png">
+                <img src="Work/картинки/3.png">
                 <h3>Edit Photos</h3>
                 <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Suspen</p>
             </div>
             <div>
-                <img src="картинки/4.png">
+                <img src="Work/картинки/4.png">
                 <h3>Edit Colors</h3>
                 <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Suspen</p>
             </div>
             <div>
-                <img src="картинки/5.png">
+                <img src="Work/картинки/5.png">
                 <h3>User Friendly</h3>
                 <p>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Suspen</p>
             </div>
             <div>
-                <img src="картинки/6.png">
+                <img src="Work/картинки/6.png">
                 <h3>100% Editable</h3>
                 <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Suspen</p>
             </div>
@@ -188,12 +188,12 @@
         <h5>Say Hi & Get in Touch</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse. </p>
         <div>
-            <img src="картинки\11.png" alt="">
-            <img src="картинки\22.png" alt="">
-            <img src="картинки\33.png"  alt="">
-            <img src="картинки\44.png" alt="">
-            <img src="картинки\55.png" alt="">
-            <img src="картинки\66.png" alt="">
+            <img src="Work/картинки/11.png" alt="">
+            <img src="Work/картинки/22.png" alt="">
+            <img src="Work/картинки/33.png"  alt="">
+            <img src="Work/картинки/44.png" alt="">
+            <img src="Work/картинки/55.png" alt="">
+            <img src="Work/картинки/66.png" alt="">
         </div>
     </div>
     <div class="footer">
