--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="main">
         <div class="inter">
             <h3>Craze Features</h3>
-            <p>Lorem ipsum dolor sit amet, pro aeterno adipisci ex, pro no iriure accusam. Eros admodum intellegat ex mea, mei wisi nullam ne, qui cu aliquid<br> nominavi. Est habemus maiestatis ut. Vim quod elitr interesset ea.</p>
+            <p>Lorem ipsum dolor sit amet, pro aeterno adipisci ex, pro no iriure accusam. Eros admodum intellegat ex mea, mei wisi nullam ne, qui cu aliquid nominavi. Est habemus maiestatis ut. Vim quod elitr interesset ea.</p>
         </div>
         <div class="main_inter">
             <div>
@@ -207,4 +207,3 @@
         </ul>
     </div>
 </html>
-<!-- Contact        Download        Press        Email        Suppor -->
