--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="main_one"></div>
     </div>
     <div class="main3">
-        <p>Craze is one of the most complete app packages I have ever come across. I would highly reccomend it to<br> anyone!”</p>
+        <p>Craze is one of the most complete app packages I have ever come across. I would highly reccomend it to anyone!”</p>
         <span>Sarah Hunt</span><br>
         <input type="radio" name="er">
         <input type="radio" name="er">
@@ -87,7 +87,7 @@
     <div class="main4">
         <div>
             <h3>Pricing Plans</h3>
-            <p>Lorem ipsum dolor sit amet, pro aeterno adipisci ex, pro no iriure accusam. Eros admodum intellegat ex mea, mei wisi nullam ne, qui cu aliquid nominavi. Est <br>habemus maiestatis ut. Vim quod elitr interesset ea.</p>
+            <p>Lorem ipsum dolor sit amet, pro aeterno adipisci ex, pro no iriure accusam. Eros admodum intellegat ex mea, mei wisi nullam ne, qui cu aliquid nominavi. Est habemus maiestatis ut. Vim quod elitr interesset ea.</p>
         </div>
 
 <div class="vces"> 
