--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <div class="main2">
         <div class="main_one">
             <h3>Whats Craze all About?</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse<br> fringilla fringilla nisl congue congue. Maecenas nec condimentum libero,<br> at elementum mauris. </p>
-            <p>Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis ornare luctus<br> id sollicitudin ante lobortis at.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse fringilla fringilla nisl congue congue. Maecenas nec condimentum libero, at elementum mauris. </p>
+            <p>Phasellus eget nisi dapibus, ultricies nisl at, hendrerit risusuis ornare luctus id sollicitudin ante lobortis at.</p>
             <ul class="spic">
                 <li>Lorem ipsum dolor sit amet</li>
                 <li>Lorem ipsum dolor sit amet consectetur elt</li>
