--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="Work/nam.css">
     <meta name="viewport" content="width=device-width">
     <link  rel="shortcut icon" href="Work/картинки/ico.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>Craze</title>
 </head>
 <body>
     <header>
